# ml_and_physical_sound_synthesis_2025sp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  audio_utils.py  biquad.ipynb  commuted_piano.ipynb  commuted_piano.py  commuted_piano_bcruz_2025-02-20.ipynb  commuted_piano_dataset_bcruz_2025-02-21.ipynb  data_utils.py  lab_20250314_bc_modal_piano_20250314.ipynb  modal_piano.py  modal_resonators_20250312.ipynb  modal_resonators_hammer_interaction_20250313.ipynb  pychuck.py  pyfaust.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  single_modal_resonator_20250311.ipynb  test.ipynb  test_chuck.chuck  test_chuck.ipynb  try_faust.dsp  try_faust.ipynb
.common/: Makefile
