[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13"
name = "bcruz_music_299_2025sp"
version = "0.0.1"
authors = [{ name = "Brian Cruz" }]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
